# rust-schedule-bot

./: Cargo.toml  README.md
migrations/2022-04-03-192927_create_games/: up.sql
migrations/2022-04-03-193523_create_users/: up.sql
migrations/2022-04-03-193938_add_user_count_to_games/: down.sql  up.sql
migrations/2022-04-03-203524_make_days_non_nullable/: down.sql  up.sql
migrations/2022-04-03-204221_rename_games_id_to_game_id/: down.sql  up.sql
migrations/2022-04-04-161132_remove_unique_from_name/: down.sql  up.sql
src/: main.rs  schema.rs
src/arguments/: mod.rs
src/commands/: mod.rs
src/database/: games.rs  mod.rs  users.rs
src/game_id/: mod.rs
src/messages/: mod.rs
src/models/: mod.rs
src/validation/: mod.rs
