[package]
name = "schedule-bot"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5"
dotenv = "0.15.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4.10", default-features = false, features = ["clock"] }
tracing = "0.1"
rand = "0.8.5"
serde_json = "1.0.79"
serde = "1.0.136"
diesel = { version = "1.4", features = ["postgres", "numeric"] }
diesel_migrations = "1.4.0"